# quantify-justice-news-geos

./: .gitignore  1-prep-data.ipynb  3-fine-tune-preprocess.ipynb  4-fine-tune-ner.ipynb  6-eval.ipynb  7-get-label-data.ipynb  README.md  custom_batcher.py  entity_remapper.py  pyproject.toml  requirements.txt  spacy_base_config.cfg  spacy_base_config_colab.cfg
config/: data_sources.yaml  params.yaml
notebooks/: 0-eda.ipynb  1-prep-data.ipynb  2-test-ots-ner.ipynb  5-ner-sr.ipynb  8-label-blocks.ipynb
notebooks/art_relevance/: experiments.ipynb
notebooks/entity_recognition/: experiments.ipynb  hypertuning.ipynb  triage.ipynb
notebooks/relevance/: experiments.ipynb
notebooks/sent_relevance/: experiments.ipynb
scripts/: definitions.py
scripts/art_relevance/: assets.py  operations.py  spacy_base_config.cfg  spacy_config.cfg
scripts/entity_recognition/: assets.py  components.py  entity_remapper.py  operations.py  spacy_base_config.cfg  spacy_base_config_colab.cfg  spacy_config.cfg
scripts/geoms/: assets.py  operations.py
scripts/neighborhood_clf/: assets.py  components.py  operations.py  spacy_base_config.cfg  spacy_config.cfg
scripts/pre_model/: assets.py  operations.py
scripts/prior_model/: assets.py  operations.py
scripts/relevance/: assets.py
scripts/sent_relevance/: assets.py  operations.py  spacy_base_config.cfg  spacy_config.cfg
scripts/utils/: __init__.py  config.py  dagster.py  labelstudio.py  logging.py  optuna.py  preprocessing.py  runners.py  spacy.py
